[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy/Spawner.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Camp.png" type="Texture" id=2]
[ext_resource path="res://Sound/enemy_spawn.ogg" type="AudioStream" id=3]

[node name="Spawner" type="Node2D" groups=[
"spawners",
"obscurable",
]]
pause_mode = 1
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 11.6376, -44.251 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 36.3832, 20.7321 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -58.8154, 12.0557 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Timer_SpawnWave" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Audio_Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 1000.0
attenuation = 3.4822
bus = "SFX"

[connection signal="timeout" from="Timer_SpawnWave" to="." method="_on_Timer_SpawnWave_timeout"]
